--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Himoyalangan Sahifa</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,8 +21,13 @@
 </div>
 
 <div id="content" class="hidden">
-  <h1>Xush Kelibsiz!</h1>
-  <p>Siz maxfiy ma'lumotlar sahifasiga kirdingiz.</p>
+  <h2>Assalomu alaykum</h2>
+  <p>Oisha hozirgi aytadigan gaplarim kulgilik ehtimol, g'alati tuyulishi mumkin. Ammo qachonlardan beri aytilishni istayotgan fikrlar barchasi. Bugun uyatchanglikni, hayojonni bir chekkaga surib qo'ydim. Ehtimol hozirgi aytgan gaplarimdan keyin menga umuman gapirmay qo'yarsan yoki aksi bo'lishi ham mumkin mendanda yaqin insoning qolmasligi ham mumkin.
+    Anchadan beri ko'ryapsan Sinfdoshlar ( to'g'rirog'i 1-2 ta aqllilar) menga yoki senga oshiqcha "hazil" qilishyapti, menku o'tganib qolganman ammo senga bu gaplar qanday ta'sir qilayotganini bilmayman. Ehtimol jahling chiqayotgandir, g'azabing qaynayotgandir yoki bepisan qarayotgandirsan bilmadim. Qisqasi bu narsa uzoq cho'zilishi mumkin emas.
+    Biganingdek, yoshligimda raqobatchim eding, ba'zida ishkalchalar qilib qo'yardim ba'zida Boshingga tosh otib qonatib qoyardim. O'shanda ham chiroyli muomilada bolarding deyarli hech qachon jirkimasdim, erinmasdan gaplarimni eshitib o'rirovrarding, biror marta aybimni boshqalarga ochmagansam. Tarbiyaga juda chiroyli misol. Qisqasi shunaqa. Aytishadiyu senga yaxshilik qilgan insonni beihtiyor yoqtirib qolasan. Hullas Menga yoqasan.
+    Bu gaplar kulgilik eshitilishi mumkin Lekin haqiqat. Sendan so'ramoqchi bo'lgan narsam shu. Agar kelajagingda meni yoningda bo'lishimni aqlingga sigdira olmasang. yo'q desang. Men hafa bo'lmayman deya olmaymanku lekin vaqti kelib unutib yuboraman. Senga umuman yaqinlashmayman. Hafa bolgan bolsam ham duolarimda seni va butun musulmonlarni ham haqqiga duo qilaman. Yaxshiliklaringga qo'limdan kelgancha yaxshilik bilan javob berishga harakat qilaman uzoqroqdan bo'lsa ham.
+    Ha bo'lsa kelajakga ko'zing yetsa,  Hech qanday va'da bera olmaymanku Lekin adashishinga yo'l qo'ymayman Maqsadlaring meni maqsadim orzularing meni orzuyim, dushmaning meni dushmanim bo'ladi( agarda menga ham togri kelsa) Va bu narsalar ham senga ham tegishlik boladi.
+    Qisqasi shunaqa, har tomondan o'ylab javob berasan degan umiddaman. </p>
 </div>
 
 <script src="script.js"></script>
